<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    style="@style/LessonLayout">

    <EditText
        android:id="@+id/lessonNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/edit_lesson_hint"
        android:inputType="textCapSentences"
        android:maxLength="20"
        android:maxLines="1" />

    <ImageButton
        android:id="@+id/deleteLessonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:background="@null"
        android:src="@drawable/baseline_delete_forever_24" />

</LinearLayout>