<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    style="@style/DayLayout"
    android:paddingBottom="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dayTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Monday" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:background="@null"
            android:src="@drawable/baseline_edit_24" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lessonsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        style="@style/RecyclerView"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</LinearLayout>